v0.5.0: a daemon that authenticates, every switch on one roster, and the failures that looked like answers
Signed-off-by: vaelii-admin <289251560+vaelii-admin@users.noreply.github.com>